--- a/css/reveal.css
+++ b/css/reveal.css
@@ -39,13 +39,15 @@ html,
 body {
   width: 100%;
   height: 100%;
-  overflow: hidden; }
+  overflow: hidden;
+  }
 
 body {
   position: relative;
   line-height: 1;
   background-color: #fff;
-  color: #000; }
+  color: #000;
+  }
 
 /*********************************************
  * VIEW FRAGMENTS
@@ -536,8 +538,9 @@ body {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  -ms-touch-action: none;
-      touch-action: none; }
+/*   -ms-touch-action: none;
+      touch-action: none;  */
+      }
 
 @media only screen and (orientation: landscape) {
   .reveal.ua-iphone {
