Added automatic transitions

--- a/css/theme.css
+++ b/css/theme.css
@@ -200,7 +200,7 @@ body {
   font-size: smaller; }
 
 .reveal small {
-  /* display: inline-block; */
+  display: inline-block;
   font-size: 0.6em;
   line-height: 1.2em;
   vertical-align: top;
