--- a/css/theme.css
+++ b/css/theme.css
@@ -63,8 +63,7 @@ body {
   text-align: left; }
 
 .reveal h4 {
-  font-size: 1em;
-  text-align: left; }
+  font-size: 0.6em; }
 
 .reveal h1 {
   text-shadow: none; }
@@ -76,7 +75,8 @@ body {
   margin: 20px 0;
   line-height: 1.3;
   font-size: 0.8em;
-  text-align: left; }
+  text-align: left;
+  }
 
 /* Ensure certain elements are never larger than the slide itself */
 .reveal img,
